added slider functionality

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,7 +11,7 @@ Description: Showcases a list of shopping lists
     <ion-title> My Shopping List </ion-title>
     <!-- Add Button -->
     <ion-buttons end>
-      <button class="add-btn" ion-button color="secondary" (click)="newShoppingList()">
+      <button class="add-btn" ion-button color="secondary" (click)="newList()">
     <ion-icon name="add"></ion-icon>&nbsp;Add
   </button>
     </ion-buttons>
